--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/sourcegraph/sourcegraph"
   },
   "engines": {
-    "node": "^v14.15.4",
+    "node": "^v16.7.0",
     "yarn": "^1.22.4"
   },
   "scripts": {
@@ -22,8 +22,13 @@
     "generate": "gulp generate",
     "watch-generate": "gulp watchGenerate",
     "test": "jest --testPathIgnorePatterns end-to-end regression integration storybook",
-    "test-integration": "TS_NODE_PROJECT=client/web/src/integration/tsconfig.json NODE_NO_WARNINGS=1 mocha --parallel=$CI --retries=1 --jobs=2  \"./client/web/src/integration/**/*.test.ts\"",
+    "test-integration:base": "TS_NODE_PROJECT=client/web/src/integration/tsconfig.json NODE_NO_WARNINGS=1 mocha --parallel=$CI --retries=1 --jobs=2",
+    "test-integration": "yarn test-integration:base \"./client/web/src/integration/**/*.test.ts\"",
+    "test-browser-integration": "yarn --cwd client/browser run test-integration",
+    "cover-integration:base": "nyc --hook-require=false yarn test-integration:base",
     "cover-integration": "nyc --hook-require=false yarn test-integration",
+    "cover-browser-integration": "nyc --hook-require=false yarn --cwd client/browser test-integration",
+    "test-lighthouse": "SOURCEGRAPH_API_URL=https://sourcegraph.com lhci collect && lhci open",
     "test-e2e": "TS_NODE_PROJECT=client/web/src/end-to-end/tsconfig.json mocha ./client/web/src/end-to-end/end-to-end.test.ts",
     "cover-e2e": "nyc --hook-require=false --silent=true yarn test-e2e",
     "storybook": "yarn workspace @sourcegraph/storybook run start",
@@ -39,7 +44,9 @@
     "release": "cd dev/release && yarn run release",
     "docsite:serve": "./dev/docsite.sh -config doc/docsite.json serve -http=localhost:5080",
     "download-puppeteer-browser": "yarn --cwd client/shared download-puppeteer-browser",
-    "build-browser-extension": "yarn --cwd client/browser run build"
+    "build-browser-extension": "yarn --cwd client/browser run build",
+    "install:sg": "dev/sg/install.sh",
+    "optimize-svg-assets": "svgo --multipass --config=\"./svgo.config.js\""
   },
   "browserslist": [
     "last 1 version",
@@ -47,7 +54,7 @@
     "not dead",
     "not <0.25%",
     "last 1 Chrome versions",
-    "last 2 Safari major versions",
+    "last 3 Safari major versions",
     "not IE > 0"
   ],
   "nyc": {
@@ -102,94 +109,101 @@
     "@graphql-codegen/typescript-apollo-client-helpers": "^1.1.9",
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@jest/types": "^27.0.6",
+    "@lhci/cli": "0.8.1",
     "@mermaid-js/mermaid-cli": "^8.7.0",
     "@octokit/rest": "^16.36.0",
     "@peculiar/webcrypto": "^1.1.7",
-    "@percy/puppeteer": "^1.1.0",
+    "@percy/cli": "^1.0.0-beta.68",
+    "@percy/puppeteer": "^2.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.0-rc.1",
     "@pollyjs/adapter": "^5.0.0",
     "@pollyjs/core": "^5.1.0",
     "@pollyjs/persister-fs": "^5.0.0",
     "@slack/web-api": "^5.10.0",
-    "@sourcegraph/eslint-config": "^0.25.1",
+    "@sourcegraph/eslint-config": "^0.26.0",
     "@sourcegraph/eslint-plugin-sourcegraph": "1.0.0",
     "@sourcegraph/prettierrc": "^3.0.3",
     "@sourcegraph/stylelint-config": "^1.3.0",
     "@sourcegraph/tsconfig": "^4.0.1",
-    "@storybook/addon-a11y": "^6.3.0",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-console": "^1.2.1",
-    "@storybook/addon-knobs": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/addon-storyshots": "^6.3.0",
-    "@storybook/addon-storyshots-puppeteer": "^6.3.0",
-    "@storybook/addon-toolbars": "^6.3.0",
-    "@storybook/addons": "^6.3.0",
-    "@storybook/api": "^6.3.0",
-    "@storybook/builder-webpack5": "^6.3.0",
-    "@storybook/client-api": "^6.3.0",
-    "@storybook/components": "^6.3.0",
-    "@storybook/core": "^6.3.0",
-    "@storybook/core-events": "^6.3.0",
-    "@storybook/manager-webpack5": "^6.3.2",
-    "@storybook/react": "^6.3.0",
-    "@storybook/theming": "^6.3.0",
+    "@storybook/addon-a11y": "^6.3.12",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-storyshots": "^6.3.12",
+    "@storybook/addon-storyshots-puppeteer": "^6.3.12",
+    "@storybook/addon-toolbars": "^6.3.12",
+    "@storybook/addons": "^6.3.12",
+    "@storybook/api": "^6.3.12",
+    "@storybook/builder-webpack5": "^6.3.12",
+    "@storybook/client-api": "^6.3.12",
+    "@storybook/components": "^6.3.12",
+    "@storybook/core": "^6.3.12",
+    "@storybook/core-events": "^6.3.12",
+    "@storybook/manager-webpack5": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@storybook/theming": "^6.3.12",
     "@terminus-term/to-string-loader": "^1.1.7-beta.1",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^10.4.8",
     "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/babel__core": "7.1.12",
-    "@types/bloomfilter": "^0.0.0",
-    "@types/case-sensitive-paths-webpack-plugin": "^2.1.5",
+    "@types/bloomfilter": "0.0.0",
+    "@types/case-sensitive-paths-webpack-plugin": "2.1.5",
     "@types/chai": "4.2.14",
     "@types/chai-as-promised": "7.1.3",
     "@types/chrome": "0.0.127",
     "@types/classnames": "2.2.10",
     "@types/command-exists": "1.2.0",
-    "@types/connect-history-api-fallback": "^1.3.4",
-    "@types/css-minimizer-webpack-plugin": "^3.0.1",
+    "@types/compression": "1.7.2",
+    "@types/compression-webpack-plugin": "9.0.0",
+    "@types/connect-history-api-fallback": "1.3.4",
+    "@types/css-minimizer-webpack-plugin": "3.0.1",
     "@types/d3-axis": "1.0.12",
-    "@types/d3-format": "^2.0.0",
+    "@types/d3-format": "2.0.0",
     "@types/d3-scale": "2.2.0",
     "@types/d3-selection": "1.4.1",
     "@types/d3-shape": "1.3.2",
-    "@types/d3-time-format": "^3.0.0",
-    "@types/enzyme": "3.10.8",
+    "@types/d3-time-format": "3.0.0",
     "@types/expect": "24.3.0",
-    "@types/express": "^4.17.11",
+    "@types/express": "4.17.11",
     "@types/fancy-log": "1.3.1",
-    "@types/glob": "^7.1.3",
+    "@types/glob": "7.1.3",
     "@types/got": "9.6.11",
     "@types/gulp": "4.0.7",
     "@types/highlight.js": "9.12.4",
     "@types/is-absolute-url": "3.0.0",
     "@types/jest": "26.0.20",
     "@types/js-cookie": "2.2.6",
+    "@types/js-yaml": "4.0.3",
     "@types/jsdom": "12.2.4",
     "@types/lodash": "4.14.167",
-    "@types/marked": "2.0.2",
+    "@types/marked": "4.0.0",
     "@types/mime-types": "2.1.0",
-    "@types/mini-css-extract-plugin": "^2.0.1",
+    "@types/mini-css-extract-plugin": "2.0.1",
     "@types/mocha": "8.2.0",
     "@types/mockdate": "2.0.0",
     "@types/mz": "2.7.3",
     "@types/node": "13.13.5",
-    "@types/node-fetch": "^2.5.10",
+    "@types/node-fetch": "2.5.10",
     "@types/pollyjs__core": "4.3.1",
     "@types/pollyjs__persister-fs": "2.0.1",
     "@types/puppeteer": "5.4.2",
     "@types/react": "17.0.0",
     "@types/react-circular-progressbar": "1.0.2",
     "@types/react-dom": "16.9.8",
-    "@types/react-grid-layout": "0.17.2",
+    "@types/react-grid-layout": "1.3.0",
     "@types/react-router": "5.1.10",
     "@types/react-router-dom": "5.1.7",
     "@types/react-stripe-elements": "6.0.4",
-    "@types/react-test-renderer": "16.9.2",
     "@types/reactstrap": "8.4.2",
     "@types/recharts": "1.8.18",
     "@types/resize-observer-browser": "0.1.4",
-    "@types/sanitize-html": "^2.0.0",
+    "@types/sanitize-html": "2.3.0",
+    "@types/sass": "1.16.1",
     "@types/semver": "7.3.1",
     "@types/shelljs": "0.8.8",
     "@types/signale": "1.4.1",
@@ -197,21 +211,22 @@
     "@types/sinon": "9.0.4",
     "@types/socket.io": "2.1.10",
     "@types/socket.io-client": "1.4.33",
-    "@types/speed-measure-webpack-plugin": "^1.3.4",
-    "@types/terser-webpack-plugin": "^5.0.4",
-    "@types/testing-library__jest-dom": "^5.9.5",
+    "@types/speed-measure-webpack-plugin": "1.3.4",
+    "@types/terser-webpack-plugin": "5.0.4",
+    "@types/testing-library__jest-dom": "5.9.5",
     "@types/textarea-caret": "3.0.0",
     "@types/uuid": "8.0.1",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@types/webpack-dev-server": "^3.11.5",
-    "@types/webpack-manifest-plugin": "^3.0.5",
+    "@types/webpack-bundle-analyzer": "4.4.1",
+    "@types/webpack-dev-server": "4.0.3",
+    "@types/webpack-manifest-plugin": "3.0.5",
     "abort-controller": "^3.0.0",
     "autoprefixer": "^10.2.1",
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-react-app": "^10.0.0",
-    "browserslist": "^4.12.0",
+    "browserslist": "^4.17.4",
+    "bundlesize2": "^0.0.31",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^4.1.0",
@@ -219,18 +234,19 @@
     "chromatic": "^5.5.0",
     "chrome-webstore-upload-cli": "^1.2.0",
     "command-exists": "^1.2.9",
+    "compression": "^1.7.4",
+    "compression-webpack-plugin": "^9.0.0",
     "connect-history-api-fallback": "^1.6.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "enzyme-to-json": "^3.5.0",
+    "esbuild": "^0.14.2",
     "eslint": "^7.17.0",
     "eslint-formatter-lsif": "^1.0.3",
     "eslint-plugin-monorepo": "^0.3.2",
     "execa": "^5.0.0",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "fancy-log": "^1.3.3",
     "get-port": "^5.1.1",
     "glob": "^7.1.6",
@@ -243,9 +259,11 @@
     "html-webpack-plugin": "^5.3.2",
     "http-proxy-middleware": "^1.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
-    "jsdom": "^15.2.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-mock-extended": "^2.0.2-beta2",
+    "jsdom": "^16.7.0",
     "json-schema-ref-parser": "^9.0.6",
     "json-schema-to-typescript": "^10.1.3",
     "latest-version": "^5.1.0",
@@ -266,14 +284,13 @@
     "postcss-custom-media": "^8.0.0",
     "postcss-focus-visible": "^5.0.0",
     "postcss-loader": "^6.1.1",
+    "postcss-modules": "^4.2.2",
     "prettier": "^2.2.1",
     "process": "^0.11.10",
     "puppeteer": "5.5.0",
     "puppeteer-firefox": "^0.5.1",
-    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-refresh": "^0.10.0",
     "react-spring": "^9.0.0",
-    "react-test-renderer": "^16.14.0",
     "sass": "^1.32.4",
     "sass-loader": "^12.1.0",
     "shelljs": "^0.8.4",
@@ -283,43 +300,45 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "storybook-addon-designs": "^6.0.0",
-    "storybook-dark-mode": "^1.0.4",
+    "storybook-addon-designs": "^6.2.0",
+    "storybook-dark-mode": "^1.0.8",
     "string-width": "^4.2.0",
     "style-loader": "^3.1.0",
     "stylelint": "^13.8.0",
+    "svgo": "^2.7.0",
     "term-size": "^2.2.0",
     "terser-webpack-plugin": "^5.1.4",
     "thread-loader": "^3.0.4",
     "ts-morph": "^8.1.0",
     "ts-node": "^9.1.1",
     "typed-scss-modules": "^4.1.1",
-    "typescript": "^4.1.3",
+    "typescript": "^4.5.2",
     "utc-version": "^2.0.2",
     "web-ext": "^4.2.0",
     "webpack": "^5.45.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "4.0.0-beta.3",
+    "webpack-dev-server": "^4.0.0",
     "webpack-manifest-plugin": "^3.1.0",
+    "wildcard-mock-link": "^2.0.1",
     "worker-loader": "^3.0.8",
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.20",
+    "@apollo/client": "3.4.7",
     "@reach/accordion": "^0.10.2",
     "@reach/combobox": "^0.15.2",
     "@reach/dialog": "^0.11.2",
     "@reach/listbox": "^0.10.1",
-    "@reach/menu-button": "^0.15.2",
+    "@reach/menu-button": "^0.16.1",
     "@reach/tabs": "^0.13.0",
     "@reach/visually-hidden": "^0.15.2",
-    "@sentry/browser": "^5.19.0",
+    "@sentry/browser": "^6.13.2",
     "@slimsag/react-shortcuts": "^1.2.1",
-    "@sourcegraph/codeintellify": "^7.2.2",
     "@sourcegraph/extension-api-classes": "^1.1.0",
     "@sourcegraph/react-loading-spinner": "0.0.7",
     "@sqs/jsonc-parser": "^1.0.3",
+    "@types/svgo": "2.6.0",
     "@visx/annotation": "^1.7.2",
     "@visx/axis": "^1.7.0",
     "@visx/glyph": "^1.7.0",
@@ -329,6 +348,9 @@
     "@visx/pattern": "^1.7.0",
     "@visx/scale": "^1.7.0",
     "@visx/xychart": "^1.7.3",
+    "ajv": "^8.6.3",
+    "ajv-formats": "^2.1.1",
+    "apollo3-cache-persist": "^0.12.1",
     "bloomfilter": "^0.0.18",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
@@ -350,15 +372,18 @@
     "graphiql": "^1.3.2",
     "highlight.js": "^10.5.0",
     "highlightjs-graphql": "^1.0.2",
+    "http-status-codes": "^2.1.4",
     "is-absolute-url": "^3.0.3",
     "iterare": "^1.2.1",
     "js-cookie": "^2.2.1",
+    "js-yaml": "^4.1.0",
     "linguist-languages": "^7.14.0",
     "lodash": "^4.17.20",
-    "marked": "^2.0.3",
-    "mdi-react": "^7.3.0",
+    "marked": "^4.0.0",
+    "mdi-react": "^8.1.0",
     "minimatch": "^3.0.4",
     "monaco-editor": "^0.24.0",
+    "monaco-yaml": "^3.2.1",
     "nice-ticks": "^1.0.1",
     "open-color": "^1.8.0",
     "path-browserify": "^1.0.1",
@@ -370,33 +395,35 @@
     "react-dom": "^16.14.0",
     "react-dom-confetti": "^0.1.4",
     "react-focus-lock": "^2.4.1",
-    "react-grid-layout": "^0.18.3",
+    "react-grid-layout": "1.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-sticky-box": "^0.9.3",
     "react-stripe-elements": "^6.1.2",
     "react-textarea-autosize": "^8.3.0",
     "react-visibility-sensor": "^5.1.1",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.9.0",
     "recharts": "^1.8.5",
     "regexpp": "^3.1.0",
     "rxjs": "^6.6.3",
     "sanitize-html": "^2.0.0",
     "semver": "^7.3.2",
-    "shepherd.js": "^8.0.2",
+    "shepherd.js": "^8.3.1",
     "string-score": "^1.0.1",
     "tabbable": "^5.1.5",
     "tagged-template-noop": "^2.1.1",
     "textarea-caret": "^3.1.0",
     "ts-key-enum": "^2.0.7",
     "tslib": "^2.1.0",
+    "use-callback-ref": "^1.2.5",
     "use-deep-compare-effect": "^1.6.1",
     "use-resize-observer": "^7.0.0",
     "utility-types": "^3.10.0",
     "uuid": "^8.3.0",
     "webext-domain-permission-toggle": "^1.0.1",
-    "webext-patterns": "^0.9.0",
-    "webextension-polyfill": "^0.6.0"
+    "webextension-polyfill": "^0.6.0",
+    "yaml-ast-parser": "^0.0.43",
+    "zustand": "^3.5.10"
   },
   "resolutions": {
     "history": "4.5.1",
